Converted to use Swing. (AWT version would crash.)